@@ -919,7 +919,6 @@ _local_fun_create_db(Environment *env, Database *db,
              |HAM_DISABLE_MMAP
              |HAM_ENABLE_FSYNC
              |HAM_READ_ONLY
-             |HAM_DISABLE_FREELIST_FLUSH
              |HAM_ENABLE_RECOVERY
              |HAM_AUTO_RECOVERY
              |HAM_ENABLE_TRANSACTIONS
@@ -1152,7 +1151,6 @@ _local_fun_open_db(Environment *env, Database *db,
              |HAM_DISABLE_MMAP
              |HAM_ENABLE_FSYNC
              |HAM_READ_ONLY
-             |HAM_DISABLE_FREELIST_FLUSH
              |HAM_ENABLE_RECOVERY
              |HAM_AUTO_RECOVERY
              |HAM_ENABLE_TRANSACTIONS
@@ -1165,7 +1163,6 @@ _local_fun_open_db(Environment *env, Database *db,
     ham_assert(!(be->get_flags()&HAM_DISABLE_MMAP));
     ham_assert(!(be->get_flags()&HAM_ENABLE_FSYNC));
     ham_assert(!(be->get_flags()&HAM_READ_ONLY));
-    ham_assert(!(be->get_flags()&HAM_DISABLE_FREELIST_FLUSH));
     ham_assert(!(be->get_flags()&HAM_ENABLE_RECOVERY));
     ham_assert(!(be->get_flags()&HAM_AUTO_RECOVERY));
     ham_assert(!(be->get_flags()&HAM_ENABLE_TRANSACTIONS));
